htdocs/js/System/system.scss
/* ... */
.rpc_render_area_container {
	background-color: #f5f5f5;

	[data-bs-theme='dark'] & {
		background-color: var(--bs-primary-bg-subtle, 'black');
	}
}

.rpc_render_area iframe {
	width: 100%;
	border-radius: 5px;
}

/* Grades */
.grade-table {
	.grades-course-total,
	.grades-course-total th {
		font-weight: bold;
		font-size: 105%;
	}

	.problem-data {
		min-width: 2.5em;
		text-align: center;
	}

	span {
		&.correct {
			color: inherit;
			background-color: #8f8;
		}

		&.incorrect {
			color: #bf5454; /* red */
			background-color: inherit;
		}

		&.unattempted {
			color: inherit;
			background-color: #88ecff;
		}

		[data-bs-theme='dark'] & {
			&.correct {
				color: black;
			}

			&.incorrect {
				color: white;
				background-color: #bf5454;
			}

			&.unattempted {
				color: black;
			}
		}
	}
}

/* Course Configuration */
.config-tabs {
	button {
		&.nav-link {
			font-weight: bold;
			color: inherit;
			border-radius: 0;

			&:focus-visible {
				box-shadow: 0 0 0 0.25rem var(--ww-course-config-tab-link-focus-outline-color, #00338840);
			}
		}

		&:not(.active) {
			background-color: #f6f6f6;
		}

		&:not(.active):hover {
			background-color: #e1e1e1;
			color: inherit;
		}

		[data-bs-theme='dark'] & {
			&:not(.active) {
				background-color: #565656;
			}

			&:not(.active):hover {
				background-color: #414141;
			}
		}

		&:focus {
			z-index: 2;
		}
	}
}

/* Stats */

[data-bs-theme='dark'] .stats-image {
	text {
		fill: white;
	}
}

/* File manager */
.file-manager-btn {
	margin-bottom: 0.25rem;
	margin-top: 0.25rem;
}

.file-manager-editor {
	border-top-right-radius: 0;
	border-top-left-radius: 0;
}

/* Problem set list */
.set_table .input-group .form-control {
	max-width: 10rem;
}

/* Problem graders */

#problem-grader-form {
	.needs-grading {
		background-color: #fff3cd;

		[data-bs-theme='dark'] & {
			background-color: #261d00;
		}

		div {
			font-weight: bold;
		}
	}

	.alt-source {
		background-color: #e6e7e9;

		[data-bs-theme='dark'] & {
			background-color: #555;
		}
	}

	.problem-grader-legend-key span {
		border: 1px solid var(--ww-layout-border-color);
	}

	.past-answer {
		&:not(:last-child) {
			border-bottom: 1px solid var(--bs-table-border-color);
			margin-bottom: 2px;
			padding-bottom: 5px;
		}

		&.correct {
			color: #060;
		}

		&.incorrect {
			color: #600;
		}

		[data-bs-theme='dark'] & {
			&.correct {
				color: #0b0;
			}

			&.incorrect {
				color: #f66;
			}
		}
	}

	.restricted-width-col {
		width: 0.1%;
	}

	.grader-comment-col {
		min-width: 300px;
	}
}

.problem-grader.accordion {
	.accordion-header {
		.accordion-button {
			--bs-accordion-btn-padding-x: 0.75rem;
			--bs-accordion-btn-padding-y: 0.375rem;
			--bs-accordion-btn-bg: var(--bs-primary, #038);
			--bs-accordion-btn-color: var(--ww-primary-foreground-color, white);
		}
	}
}

.problem-grader-table {
	.col-fixed {
		width: 11rem;
		min-width: 11rem;
		white-space: nowrap;
	}

	.problem-grader-message {
		font-weight: bold;
		transition: 3s ease-in all;
		padding-left: 0.5rem;
		padding-right: 0.5rem;

		&.alert-success,
		&.alert-danger {
			transition: none;
			border-radius: 3px;
			color: var(--bs-alert-color);
			background-color: var(--bs-alert-bg);
		}
	}

	.problem-score,
	.problem-points,
	.answer-part-score {
		width: 5.5rem;
	}
}

#problem-grader-form,
.problem-grader-table {
	.mv-container .mv-inner-container,
	.mq-latex-editor-container .mq-latex-editor-inner-container {
		width: 100%;
	}
}

mjx-help-background {
	z-index: 1055;
}

[data-bs-theme='dark'] .flatpickr-confirm {
	svg {
		fill: white;
	}
}

